--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 </head>
 <body>
 	<canvas id="cas" width="375px" height="677px"></canvas>
+	<div>在lx分支的修改</div>
 </body>
 </html>
 <script type="text/javascript" src="js/wipe.js"></script>
